--- a/html/anomalias.html
+++ b/html/anomalias.html
@@ -24,7 +24,7 @@
             <img src="anemic 1.png" class="anemic_1" alt="">
             <img class="logo" src="if_whitelogo.png" alt="">
             <img class="doctor" src="doctor.png">
-            <a href="index.html"><button class="button_1">MUDOU AQUI</button></a>
+            <a href="index.html"><button class="button_1">VOLTAR PARA A PÁGINA INICIAL</button></a>
         </div>
     </section>
 
