--- a/html/function.html
+++ b/html/function.html
@@ -39,7 +39,7 @@
                 </p>
             </div>
             <div class="button">
-                <a href="index.html"><button>VOLTAR PARA A PÁGINA INICIAL</button></a>
+                <a href="index.html"><button class="button_1">VOLTAR PARA A PÁGINA INICIAL</button></a>
             </div>
         </div>
     </section>
@@ -56,6 +56,9 @@
             </div>
             <div class="p_2">
                 <p class="p_b">Confira acima o vídeo da estudante Maria Luíza explicando a importância das hemácias em nosso organismo.</p>
+            </div>
+            <div class="button_mobile">
+                <a href="index.html"><button class="button_2">VOLTAR PARA A PÁGINA INICIAL</button></a>
             </div>
         </div>
     </section>
