--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
             </div>
             <ul>
                 <li>
-                    <a href="introduction.html">Introdução</a>
+                    <a href="#introduction">Introdução</a>
                 </li>
                 <li>
                     <a href="structure.html">Estrutura</a>
@@ -28,6 +28,12 @@
                     <a href="anomalias.html">Anomalias</a>
                 </li>
             </ul>
+        </nav>
+
+        <nav class="mobile">
+            <div class="logo_1">
+                <img src="ifrn_logo.png" alt="logo" class="logo_img_1">
+            </div>
         </nav>
     
         <main>
@@ -44,6 +50,23 @@
                 </div>
             </div>
         </main>
+
+        <footer class="mobile2">
+            <ul>
+                <li>
+                    <a href="#introduction">Introdução</a>
+                </li>
+                <li>
+                    <a href="structure.html">Estrutura</a>
+                </li>
+                <li>
+                    <a href="function.html">Funções</a>
+                </li>
+                <li>
+                    <a href="anomalias.html">Anomalias</a>
+                </li>
+            </ul>
+        </footer>
     
         <footer class="footer_1">
             <div class="footer_a">
